# Haskell-assignment

./: CHANGELOG.md  README.md  filik.txt  fp-zad.cabal  pagerank.jsonl  parserOutputPages.txt
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
